--- a/src/style.css
+++ b/src/style.css
@@ -47,8 +47,19 @@
 .hidden {
   display: none;
 }
+.cat-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-right: 50px;
+  margin-left: 50px;
+  box-shadow: '0 2px 5px rgba(0, 0, 0, 0.2), 0 4px 6px rgba(0, 0, 0, 0.2)';
+}
 .fotoCat {
+  display: block;
   padding-top: 30px;
-  margin-right: auto;
-  margin-left: auto;
+}
+.infoCat {
+  text-align: center;
 }
